hphp/test/slow/readonly/readonly_exceptions.php.expectf
Fatal error: This exception is readonly; throwing readonly exceptions is not currently supported. in %s on line 5
